[gd_scene load_steps=3 format=3 uid="uid://clgfl4v6hr1y3"]

[ext_resource type="Script" path="res://scripts/menu.gd" id="1"]
[ext_resource type="Script" path="res://scripts/settings.gd" id="2"]

[node name="menu" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1")

[node name="home" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="home"]
clip_contents = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -625.0
offset_top = -360.0
offset_right = 625.0
offset_bottom = 360.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="HSeparator" type="HSeparator" parent="home/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="home/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VSeparator" type="VSeparator" parent="home/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="settings" type="Button" parent="home/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "  Settings  "

[node name="VSeparator2" type="VSeparator" parent="home/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HSeparator2" type="HSeparator" parent="home/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="gamemode" type="OptionButton" parent="home/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
theme_override_font_sizes/font_size = 20
alignment = 1
selected = 1
item_count = 3
popup/item_0/text = "Deathmatch"
popup/item_1/text = "Intellectual Deathmatch"
popup/item_1/id = 1
popup/item_2/text = "Intellectual Deathmatch with a Sicilian"
popup/item_2/id = 2

[node name="HSeparator3" type="HSeparator" parent="home/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="container" type="HBoxContainer" parent="home/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="label" type="Label" parent="home/VBoxContainer/container"]
layout_mode = 2
text = "Enter an address:"

[node name="line_edit" type="LineEdit" parent="home/VBoxContainer/container"]
layout_mode = 2
text = "127.0.0.1"
expand_to_text_length = true

[node name="join" type="Button" parent="home/VBoxContainer/container"]
layout_mode = 2
text = "Join"

[node name="HSeparator4" type="HSeparator" parent="home/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="start" type="Button" parent="home/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
theme_override_font_sizes/font_size = 75
text = "  Start  "

[node name="HSeparator5" type="HSeparator" parent="home/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="settings" type="CanvasLayer" parent="."]
visible = false
script = ExtResource("2")

[node name="color_rect" type="ColorRect" parent="settings"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -500.0
offset_top = -300.0
offset_right = 500.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.313726, 0.247059, 0.2, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="settings"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="HSeparator7" type="HSeparator" parent="settings/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HSeparator" type="HSeparator" parent="settings/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer3" type="HBoxContainer" parent="settings/VBoxContainer"]
layout_mode = 2

[node name="VSeparator3" type="VSeparator" parent="settings/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VSeparator" type="VSeparator" parent="settings/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3

[node name="exit" type="Button" parent="settings/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 25
text = "exit"

[node name="VSeparator2" type="VSeparator" parent="settings/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HSeparator2" type="HSeparator" parent="settings/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="settings/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="label" type="Label" parent="settings/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Width of arena:"

[node name="width" type="SpinBox" parent="settings/VBoxContainer/HBoxContainer"]
layout_mode = 2
min_value = 1.0
max_value = 10.0
value = 5.0
rounded = true

[node name="HSeparator3" type="HSeparator" parent="settings/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="settings/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="label" type="Label" parent="settings/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Length of arena:"

[node name="length" type="SpinBox" parent="settings/VBoxContainer/HBoxContainer2"]
layout_mode = 2
min_value = 1.0
max_value = 10.0
value = 5.0
rounded = true

[node name="HSeparator4" type="HSeparator" parent="settings/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer2" type="HBoxContainer" parent="settings/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="label" type="Label" parent="settings/VBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Graphics level:"

[node name="graphics_level" type="OptionButton" parent="settings/VBoxContainer/VBoxContainer2"]
layout_mode = 2
item_count = 3
popup/item_0/text = "Low"
popup/item_1/text = "Medium"
popup/item_1/id = 1
popup/item_2/text = "High"
popup/item_2/id = 2

[node name="HSeparator6" type="HSeparator" parent="settings/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HSeparator5" type="HSeparator" parent="settings/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[connection signal="pressed" from="home/VBoxContainer/HBoxContainer/settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="home/VBoxContainer/start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="settings/VBoxContainer/HBoxContainer3/exit" to="." method="_on_exit_pressed"]
[connection signal="value_changed" from="settings/VBoxContainer/HBoxContainer/width" to="settings" method="_on_width_value_changed"]
[connection signal="value_changed" from="settings/VBoxContainer/HBoxContainer2/length" to="settings" method="_on_length_value_changed"]
[connection signal="item_selected" from="settings/VBoxContainer/VBoxContainer2/graphics_level" to="settings" method="_on_graphics_level_item_selected"]
